--- a/try.css
+++ b/try.css
@@ -53,9 +53,23 @@ hr {
 }
 .d2{
   width: auto;
-  height: 100%;
+  height: 500px;
   background-color: rgba(218, 223, 225, 1);
+  overflow: hidden;
+  border: 1px solid #444;
 }
+
+.d2:hover {
+        overflow: auto;
+}
+
+div.d2{
+   padding-right: 16px;
+}
+div.d2:hover {
+        padding-right: 0px;
+}
+
 .margin{
   margin-left: 30px;
 }
