--- a/try.css
+++ b/try.css
@@ -5,7 +5,7 @@
 .d1{
   width: auto;
   height: 280px;
-  background-color: hsl(0,0%,.5%);
+  background-color: hsl(0,0%,.5%,0.65);
   color: white;
   margin: 0;
 
@@ -54,7 +54,7 @@ hr {
 .d2{
   width: auto;
   height: 500px;
-  background-color: rgba(218, 223, 225, 1);
+  background-color: rgba(218, 223, 225, 0.7);
   overflow: hidden;
   border: 1px solid #444;
 }
@@ -100,3 +100,10 @@ a{
   color: black;
   margin-left: 30px;
 }
+.content2{
+margin-right: 100px;}
+
+
+
+/*.head a{
+a:hover {text-decoration:none;color:yellowgreen;font-weight:bold;}*/
