--- a/try.css
+++ b/try.css
@@ -85,10 +85,10 @@ margin-right: 80px;
                /* height:300px; */
             }
 .in-topic{
-  width:auto;
+  width:90%;
   height: auto;
   margin-left: 100px;
-
+  float: center;
 }
 
 a{
