--- a/try.css
+++ b/try.css
@@ -82,6 +82,7 @@ margin-right: 80px;
 .in1{ 
                 float:left;  
                 width:5%; 
+  height:20px;
                /* height:300px; */
             }
 .in-topic{
