--- a/try.css
+++ b/try.css
@@ -87,7 +87,7 @@ margin-right: 80px;
             }
 .in-topic{
   width:90%;
-  height: auto;
+  height: 120px;
   margin-left: 100px;
   float: center;
 }
