--- a/try.css
+++ b/try.css
@@ -79,12 +79,12 @@ div.d2:hover {
   margin-left: 30px;
 margin-right: 80px;
 }
-.in1{ 
+/*.in1{ 
                 float:left;  
                 width:8%; 
   height:auto;
-               /* height:300px; */
-            }
+               height:300px;
+            }*/
 .in-topic{
   width:90%;
   height: auto;
